tests/baselines/reference/numericStringNamedPropertyEquivalence.errors.txt
==== tests/cases/compiler/numericStringNamedPropertyEquivalence.ts (4 errors) ====
    // Each of these types has an error in it. 
    // String named and numeric named properties conflict if they would be equivalent after ToNumber on the property name.
    class C {
        "1": number;
        "1.0": number; // not a duplicate
        1.0: number;
        ~~~
!!! numericStringNamedPropertyEquivalence.ts(6,5): error TS2000: Duplicate identifier '1.0'. Additional locations:
!!! 	numericStringNamedPropertyEquivalence.ts(4,5)
    }
    
    interface I {
        "1": number;
        "1.": number; // not a duplicate
        1: number;
        ~
!!! numericStringNamedPropertyEquivalence.ts(12,5): error TS2000: Duplicate identifier '1'. Additional locations:
!!! 	numericStringNamedPropertyEquivalence.ts(10,5)
    }
    
    var a: {
        "1": number;
        1.0: string;
        ~~~
!!! numericStringNamedPropertyEquivalence.ts(17,5): error TS2000: Duplicate identifier '1.0'. Additional locations:
!!! 	numericStringNamedPropertyEquivalence.ts(16,5)
    }
    
    var b = {
        "0": '',
        0: ''
        ~~~~~
!!! numericStringNamedPropertyEquivalence.ts(22,5): error TS2000: Duplicate identifier '0'. Additional locations:
!!! 	numericStringNamedPropertyEquivalence.ts(21,5)
    }